--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </ul>
            </nav>
        </section>
-       <section class="banner">
+       <section class="banner banner-home">
           <div class="gamehub-phrase">
               <img src="/images/GameHubPhrase.png" alt="Game Hub Phrase">
           </div>
@@ -48,20 +48,20 @@
            <h1>Systems</h1>
            <div class="systems-content">
                 <div>
-                    <a href="/systems/playstation.html"><img src="/images/Systems/PlayStation System.png" alt="PlayStation">
-                    <h2>Playstation</h2>
+                    <a href="/systems/playstation.html"> <img src="/images/Systems/PlayStation System.png" alt="PlayStation"></a>  
+                    <h2><a href="/systems/playstation.html">PlayStation</a></h2>
                 </div>
                 <div>
-                    <a href="/systems/xbox.html"><img src="/images/Systems/Xbox System.png" alt="Xbox" />
-                    <h2>Xbox</h2>
+                    <a href="/systems/xbox.html"> <img src="/images/Systems/Xbox System.png" alt="Xbox"></a>  
+                    <h2><a href="/systems/xbox.html">Xbox</a></h2>
                 </div>
                 <div>
-                    <a href="/systems/nintendo.html"><img src="/images/Systems/Nintendo System.png" alt="Nintendo" />
-                    <h2>Nintendo</h2>
+                    <a href="/systems/nintendo.html"> <img src="/images/Systems/Nintendo System.png" alt="Nintendo"></a>  
+                    <h2><a href="/systems/nintendo.html">Nintendo</a></h2>
                 </div>
                 <div>
-                    <a href="/systems/pc.html"><img src="/images/Systems/PC System.png" alt="PC" />    
-                    <h2>PC</h2>
+                    <a href="/systems/pc.html"> <img src="/images/Systems/PC System.png" alt="PC"></a>      
+                    <h2><a href="/systems/pc.html">PC</a></h2>
                 </div>  
            </div>
         </section>
@@ -70,28 +70,28 @@
            <div class="best-sellers-content">
                 <div>
                     <a href="/games/assassin.html"> <img src="/images/Covers/Assassin.png" alt="Assassin"></a>
-                    <h2>Assassin (2020)</h2>
+                    <h2><a href="/games/assassin.html">Assassin (2020)</h2></a>
                     <p>Information about the game</p>
                     <p>19.99$</p>
                     <a href="/mainheader/cart.html" class="cta cta-small">Add to Cart</a>
                 </div>
                 <div>
                     <a href="/games/cyberpunk.html"> <img src="/images/Covers/Cyperpunk.png" alt="Cyberpunk"></a>  
-                    <h2>Cyberpunk (2020)</h2>
+                    <h2><a href="/games/cyberpunk.html">Cyberpunk (2020)</h2></a>
                     <p>Information about the game</p>
                     <p>19.99$</p>
                     <a href="/mainheader/cart.html" class="cta cta-small">Add to Cart</a> 
                 </div>
                 <div> 
                     <a href="/games/black.html"> <img src="/images/Covers/Black.png" alt="Black"></a>  
-                    <h2>Black (2020)</h2>
+                    <h2><a href="/games/black.html">Black (2020)</h2></a>
                     <p>Information about the game</p>
                     <p>19.99$</p>
                     <a href="/mainheader/cart.html" class="cta cta-small">Add to Cart</a> 
                 </div>
                 <div>
                     <a href="/games/forge-legend.html"> <img src="/images/Covers/Forge Legend.png" alt="Forge Legend"></a> 
-                    <h2>Forge Legend (2020)</h2>
+                    <h2><a href="/games/forge-legend.html">Forge Legend (2020)</h2></a>
                     <p>Information about the game</p>
                     <p>19.99$</p>
                     <a href="/mainheader/cart.html" class="cta cta-small">Add to Cart</a> 
@@ -103,28 +103,28 @@
             <div class="critically-acclaimed-content">
                 <div>
                     <a href="/games/assassin.html"> <img src="/images/Covers/Assassin.png" alt="Assassin"></a>
-                    <h2>Assassin (2020)</h2>
+                    <h2><a href="/games/assassin.html">Assassin (2020)</h2></a>
                     <p>Information about the game</p>
                     <p>19.99$</p>
                     <a href="/mainheader/cart.html" class="cta cta-small">Add to Cart</a>
                 </div>
                 <div>
                     <a href="/games/cyberpunk.html"> <img src="/images/Covers/Cyperpunk.png" alt="Cyberpunk"></a>  
-                    <h2>Cyberpunk (2020)</h2>
+                    <h2><a href="/games/cyberpunk.html">Cyberpunk (2020)</h2></a>
                     <p>Information about the game</p>
                     <p>19.99$</p>
                     <a href="/mainheader/cart.html" class="cta cta-small">Add to Cart</a> 
                 </div>
                 <div> 
                     <a href="/games/black.html"> <img src="/images/Covers/Black.png" alt="Black"></a>  
-                    <h2>Black (2020)</h2>
+                    <h2><a href="/games/black.html">Black (2020)</h2></a>
                     <p>Information about the game</p>
                     <p>19.99$</p>
                     <a href="/mainheader/cart.html" class="cta cta-small">Add to Cart</a> 
                 </div>
                 <div>
                     <a href="/games/forge-legend.html"> <img src="/images/Covers/Forge Legend.png" alt="Forge Legend"></a> 
-                    <h2>Forge Legend (2020)</h2>
+                    <h2><a href="/games/forge-legend.html">Forge Legend (2020)</h2></a>
                     <p>Information about the game</p>
                     <p>19.99$</p>
                     <a href="/mainheader/cart.html" class="cta cta-small">Add to Cart</a> 
