--- a/mainheader/contact.html
+++ b/mainheader/contact.html
@@ -15,22 +15,25 @@
         <div class="logo">
             <a href="../index.html"> <img src="../images/GameHubLogo.png" alt="Game Hub Logo" />
         </div>
+        <div class="searchbar">
+            <input type="text" placeholder="Search..." />
+        </div>
         <nav>
             <ul>
-                <li><a href="../mainheader/contact.html" class="active">Contact Us</a></li>
-                <li><a href="../mainheader/cart.html" >Cart</a></li>
-                <li><a href="../mainheader/login.html">Login</a></li>
+                <li><a href="../mainheader/contact.html" class="active cta cta-main">Contact Us</a></li>
+                <li><a href="../mainheader/cart.html" class="cta cta-main">Cart</a></li>
+                <li><a href="../mainheader/login.html" class="cta cta-main">Login</a></li>
             </ul>
         </nav>
        </section>
        <section class="sub-head">
            <nav>
                <ul>
-                    <li><a href="../subheader/games.html">Games</a></li>
-                    <li><a href="../subheader/pre-order.html">Pre-Order</a></li>
-                    <li><a href="../subheader/used.html">Used</a></li>
-                    <li><a href="../subheader/deals.html">Deals</a></li>
-                    <li><a href="../subheader/systems.html">Systems</a></li>
+                    <li><a href="../subheader/games.html" class="cta cta-sub">Games</a></li>
+                    <li><a href="../subheader/pre-order.html" class="cta cta-sub">Pre-Order</a></li>
+                    <li><a href="../subheader/used.html" class="cta cta-sub">Used</a></li>
+                    <li><a href="../subheader/deals.html" class="cta cta-sub">Deals</a></li>
+                    <li><a href="../subheader/systems.html" class="cta cta-sub">Systems</a></li>
                 </ul>
            </nav>
        </section>
