--- a/systems/pc.html
+++ b/systems/pc.html
@@ -41,75 +41,122 @@
        </section>
    </header> 
    <main>
- </section>
- <section>
- <div>
-     <h1>Best Sellers</h1>
-     <div class="best-sellers-content">
-          <div>
-              <a href="../games/assassin.html"> <img src="../images/Covers/Assassin.png" alt="Assassin"></a>
-              <h2><a href="../games/assassin.html">Assassin (2020)</h2></a>
-              <p>Information about the game</p>
-              <p>19.99$</p>
-              <a href="../mainheader/cart.html" class="cta cta-small">Add to Cart</a>
-          </div>
-          <div>
-              <a href="../games/cyberpunk.html"> <img src="../images/Covers/Cyperpunk.png" alt="Cyberpunk"></a>  
-              <h2><a href="../games/cyberpunk.html">Cyberpunk (2020)</h2></a>
-              <p>Information about the game</p>
-              <p>19.99$</p>
-              <a href="../mainheader/cart.html" class="cta cta-small">Add to Cart</a> 
-          </div>
-          <div> 
-              <a href="../games/black.html"> <img src="../images/Covers/Black.png" alt="Black"></a>  
-              <h2><a href="../games/black.html">Black (2020)</h2></a>
-              <p>Information about the game</p>
-              <p>19.99$</p>
-              <a href="../mainheader/cart.html" class="cta cta-small">Add to Cart</a> 
-          </div>
-          <div>
-              <a href="../games/forge-legend.html"> <img src="../images/Covers/Forge Legend.png" alt="Forge Legend"></a> 
-              <h2><a href="../games/forge-legend.html">Forge Legend (2020)</h2></a>
-              <p>Information about the game</p>
-              <p>19.99$</p>
-              <a href="../mainheader/cart.html" class="cta cta-small">Add to Cart</a> 
-          </div>
-     </div>
- </section>
- <section >
-      <h1>Critically Acclaimed</h1>
-      <div class="critically-acclaimed-content">
-          <div>
-              <a href="../games/assassin.html"> <img src="../images/Covers/Assassin.png" alt="Assassin"></a>
-              <h2><a href="../games/assassin.html">Assassin (2020)</h2></a>
-              <p>Information about the game</p>
-              <p>19.99$</p>
-              <a href="../mainheader/cart.html" class="cta cta-small">Add to Cart</a>
-          </div>
-          <div>
-              <a href="../games/cyberpunk.html"> <img src="../images/Covers/Cyperpunk.png" alt="Cyberpunk"></a>  
-              <h2><a href="../games/cyberpunk.html">Cyberpunk (2020)</h2></a>
-              <p>Information about the game</p>
-              <p>19.99$</p>
-              <a href="../mainheader/cart.html" class="cta cta-small">Add to Cart</a> 
-          </div>
-          <div> 
-              <a href="../games/black.html"> <img src="../images/Covers/Black.png" alt="Black"></a>  
-              <h2><a href="/games/black.html">Black (2020)</h2></a>
-              <p>Information about the game</p>
-              <p>19.99$</p>
-              <a href="../mainheader/cart.html" class="cta cta-small">Add to Cart</a> 
-          </div>
-          <div>
-              <a href="../games/forge-legend.html"> <img src="../images/Covers/Forge Legend.png" alt="Forge Legend"></a> 
-              <h2><a href="../games/forge-legend.html">Forge Legend (2020)</h2></a>
-              <p>Information about the game</p>
-              <p>19.99$</p>
-              <a href="../mainheader/cart.html" class="cta cta-small">Add to Cart</a> 
-          </div>
-      </div>
- </section>
-</main>
+    <section>
+    <div>
+        <h1>Best Sellers</h1>
+           <div class="best-sellers-content">
+                <div class="game">
+                    <div>
+                        <a href="../games/assassin.html"> <img src="../images/Covers/Assassin.png" alt="Assassin"></a>
+                    </div>
+                    <div>
+                        <h2><a href="../games/assassin.html">Assassin (2020)</h2></a>
+                        <p>Information about the game</p>
+                        <div class="something">
+                            <p class="price">19.99$</p>
+                            <a href="/mainheader/cart.html" class="cta cta-large">Add to Cart</a> 
+                        </div>
+                    </div>
+                </div>
+                <div class="game">
+                    <div>
+                        <a href="../games/cyberpunk.html"> <img src="../images/Covers/Cyperpunk.png" alt="Cyberpunk"></a>  
+                    </div>
+                    <div>
+                        <h2><a href="../games/cyberpunk.html">Cyberpunk (2020)</h2></a>
+                        <p>Information about the game</p>
+                        <div class="something">
+                            <p class="price">19.99$</p>
+                            <a href="/mainheader/cart.html" class="cta cta-large">Add to Cart</a> 
+                        </div>
+                    </div> 
+                </div>
+                <div class="game"> 
+                    <div>
+                        <a href="../games/black.html"> <img src="../images/Covers/Black.png" alt="Black"></a>  
+                    </div>
+                    <div>
+                        <h2><a href="../games/black.html">Black (2020)</h2></a>
+                        <p>Information about the game</p>
+                        <div class="something">
+                            <p class="price">19.99$</p>
+                            <a href="/mainheader/cart.html" class="cta cta-large">Add to Cart</a> 
+                        </div>
+                    </div> 
+                </div>
+                <div class="game">
+                    <div>
+                        <a href="../games/forge-legend.html"> <img src="../images/Covers/Forge Legend.png" alt="Forge Legend"></a> 
+                    </div>
+                    <div>
+                        <h2><a href="../games/forge-legend.html">Forge Legend (2020)</h2></a>
+                        <p>Information about the game</p>
+                        <div class="something">
+                            <p class="price">19.99$</p>
+                            <a href="/mainheader/cart.html" class="cta cta-large">Add to Cart</a> 
+                        </div>
+                    </div>
+                </div>
+           </div>
+       </section>
+       <section >
+            <h1>Critically Acclaimed</h1>
+            <div class="critically-acclaimed-content">
+                <div class="game">
+                    <div>
+                        <a href="../games/assassin.html"> <img src="../images/Covers/Assassin.png" alt="Assassin"></a>
+                    </div>
+                    <div>
+                        <h2><a href="../games/assassin.html">Assassin (2020)</h2></a>
+                        <p>Information about the game</p>
+                        <div class="something">
+                            <p class="price">19.99$</p>
+                            <a href="/mainheader/cart.html" class="cta cta-large">Add to Cart</a> 
+                        </div>
+                    </div>
+                </div>
+                <div class="game">
+                    <div>
+                        <a href="../games/cyberpunk.html"> <img src="../images/Covers/Cyperpunk.png" alt="Cyberpunk"></a>  
+                    </div>
+                    <div>
+                        <h2><a href="../games/cyberpunk.html">Cyberpunk (2020)</h2></a>
+                        <p>Information about the game</p>
+                        <div class="something">
+                            <p class="price">19.99$</p>
+                            <a href="/mainheader/cart.html" class="cta cta-large">Add to Cart</a> 
+                        </div> 
+                    </div> 
+                </div>
+                <div class="game"> 
+                    <div>
+                        <a href="../games/black.html"> <img src="../images/Covers/Black.png" alt="Black"></a>  
+                    </div>
+                    <div>
+                        <h2><a href="../games/black.html">Black (2020)</h2></a>
+                        <p>Information about the game</p>
+                        <div class="something">
+                            <p class="price">19.99$</p>
+                            <a href="/mainheader/cart.html" class="cta cta-large">Add to Cart</a> 
+                        </div>
+                    </div> 
+                </div>
+                <div class="game">
+                    <div>
+                        <a href="../games/forge-legend.html"> <img src="../images/Covers/Forge Legend.png" alt="Forge Legend"></a> 
+                    </div>
+                    <div>
+                        <h2><a href="../games/forge-legend.html">Forge Legend (2020)</h2></a>
+                        <p>Information about the game</p>
+                        <div class="something">
+                            <p class="price">19.99$</p>
+                            <a href="/mainheader/cart.html" class="cta cta-large">Add to Cart</a> 
+                        </div> 
+                    </div>
+                </div>
+            </div>    
+       </section>
+   </main>
 <footer>Copyright &copy;</footer>
 </body>
 </html>
